// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`01. Initial state 1`] = `
<App>
  <div>
    12:00:00 AM
  </div>
</App>
------------HTML PREVIEW---------------
<App>
  <div>
    12:00:00 AM
  </div>
</App>
`;

exports[`02. After 2 seconds 1`] = `
<App>
  <div>
    12:00:02 AM
  </div>
</App>
------------HTML PREVIEW---------------
<App>
  <div>
    12:00:02 AM
  </div>
</App>
`;

exports[`03. After 10.5 seconds 1`] = `
<App>
  <div>
    12:00:10 AM
  </div>
</App>
------------HTML PREVIEW---------------
<App>
  <div>
    12:00:10 AM
  </div>
</App>
`;
